sumo/tests/sumo/extended/wauts/errors/cross3ltl_error_missing_wautid/tls_state_switch.sumo
<?xml version="1.0" encoding="UTF-8"?>

<!-- generated on 11/14/16 16:07:12 by SUMO Version dev-SVN-r21978
<?xml version="1.0" encoding="UTF-8"?>

<configuration xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/sumoConfiguration.xsd">

    <input>
        <net-file value="net.net.xml"/>
        <route-files value="input_routes.rou.xml"/>
        <additional-files value="input_additional.add.xml"/>
    </input>

    <time>
        <begin value="0"/>
        <end value="400"/>
    </time>

    <report>
        <xml-validation value="never"/>
        <duration-log.disable value="true"/>
    </report>

</configuration>
-->

<tls-states xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="http://sumo.dlr.de/xsd/tlsstate_file.xsd">
</tls-states>
